--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "sourceMap": true,
     "module": "es6",
     "target": "es6",
+    "outDir": "public/js",
     "lib": [
       "dom",
       "dom.iterable",
